--- a/pages/Home.html
+++ b/pages/Home.html
@@ -101,16 +101,16 @@
         </header>
         <!-- /Header -->
         <!-- Banner -->
-        <section id="Banner" class="myContainer m-0 p-sm-3 p-1  Line d-flex row justify-content-center align-items-center">
+        <section id="Banner" class="myContainer h-auto m-0 p-sm-3 p-1  Line d-flex row justify-content-center align-items-center">
             <img src="../img/Banner/BannerDefualt.png" alt="Banner Default" class="img-fluid h-100 w-100">
         </section>
         <!-- /Banner -->
         <!-- Categories -->
-        <section id="Categories" class="myContainer d-flex flex-column p-0">
+        <section id="Categories" class="myContainer h-auto d-flex flex-column p-0">
             <div id="CategoriesTitle" class="w-100 m-0 p-0 Line d-flex  justify-content-end align-items-center">
                 <h2 class="px-3">دسته بندی</h2>
             </div>
-            <div id="CategoriesBox" class="w-100 py-2 Line d-flex flex-nowrap row mx-0  align-items-center justify-content-between"> 
+            <div id="CategoriesBox" class="w-100 py-2 Line d-flex flex-nowrap row mx-0  align-items-baseline justify-content-between"> 
                 <div class="px-1 CategoryBox d-flex flex-column justify-content-center align-items-center">
                     <a href="Categories.html" class="w-100 h-auto">
                         <div class="Category w-100 h-auto p-2 "> <img src="../icon/Categuriy/Home.png" alt="Home Category" class="img-fluid w-100 h-100"> </div>
@@ -187,7 +187,7 @@
         </section>
         <!-- /Categories -->
         <!-- NewstJob -->
-        <section id="NewstJob" class="myContainer  p-0 m-0 d-flex row justify-content-between align-items-center">
+        <section id="NewstJob" class="myContainer h-auto p-0 m-0 d-flex row justify-content-between align-items-center">
             <div class="Jobcard d-flex flex-column col-sm-3 col-4 px-sm-3 px-1 py-2 ">
                <a href="JobView.html" class="d-flex flex-column w-100 h-100">
                 <div class="JobCard-Img w-100 h-50">
@@ -248,7 +248,7 @@
         </section>
         <!-- /NewstJob -->
         <!-- WebLog -->
-        <section id="WebLog" class="myContainer m-0 d-flex flex-column ">
+        <section id="WebLog" class="myContainer h-auto m-0 d-flex flex-column ">
             <div class="WeblogTitle px-3 Line d-flex flex-column  justify-content-center align-items-end">
                 <h2>وبلاگ</h2>
             </div>
@@ -293,8 +293,8 @@
         </section>
         <!-- /WebLog -->
         <!-- Request -->
-        <section id="Request" class="myContainer m-0 d-flex align-items-center row">
-            <div id="RequestBox" class="d-flex flex-nowrap row px-sm-3 px-0 mx-2 justify-content-start align-items-start col-sm-10 col-12 h-auto ">
+        <section id="Request" class="myContainer h-auto m-0 d-flex align-items-center row">
+            <div id="RequestBox" class="d-flex flex-nowrap row px-sm-3 px-0 mx-0 justify-content-start align-items-start col-sm-10 col-12 h-auto ">
                 <div class="col-sm-3 col-4 mx-sm-0 p-sm-2 px-1">
                     <a href="RequestView.html">
                         <div class="RequestCard d-flex flex-column">
@@ -344,7 +344,7 @@
                     </a>
                 </div>
             </div>
-            <div id="RequestTitle" class="d-sm-flex d-none flex-column px-0 mx-2 justify-content-center col-sm-2  h-100">
+            <div id="RequestTitle" class="d-sm-flex d-none flex-column px-0 mx-0 justify-content-center col-sm-2  h-100">
                 <div class="w-100 h-50 d-flex p-3 flex-column justify-content-end align-items-end">
                     <img class="img-fluid w-auto h-100" src="../icon/Request.png" alt="RequestTitle Image">
                 </div>
@@ -356,7 +356,7 @@
         </section>
         <!-- /Request -->
         <!-- Offers -->
-        <section id="Offers" class="myContainer d-flex flex-column Line">
+        <section id="Offers" class="myContainer h-auto d-flex flex-column Line">
             <div class="OffersTitle px-3 Line d-flex flex-column justify-content-center align-items-end">
                 <h2>پیشنهادات</h2>
             </div>
